opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-fix"
bug-reports: "https://github.com/vbmithr/ocaml-fix/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-fix"
doc: "https://vbmithr.github.io/ocaml-fix/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
depends: [
  "dune" {>= "1.11.4"}
  "ptime" {>= "0.8.5"}
  "uri-sexp" {>= "3.1.0"}
  "logs" {>= "0.7.0"}
  "fix"
  "async-uri" {>= "0.1"}
  "logs-async" {>= "1.1"}
  "core" {>= "v0.12.0"}
  "async" {>= "v0.12.0"}
  "angstrom-async" {>= "0.12.1"}
  "faraday-async" {>= "0.7.0"}
]
pin-depends: [
  ["fix.dev" "git+https://github.com/vbmithr/ocaml-fix.git"]
  ["async-uri.dev" "git+https://github.com/vbmithr/async-uri.git"]
  ["logs-async.dev" "git+https://github.com/vbmithr/logs-async.git"]
]
synopsis: "FIX protocol: Async library to communicate to a server"
description:"""The Financial Information eXchange (FIX) protocol is
an electronic communications protocol initiated in 1992 for
international real-time exchange of information related to securities
transactions and markets."""
