opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-fix"
bug-reports: "https://github.com/vbmithr/ocaml-fix/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-fix"
doc: "https://vbmithr.github.io/ocaml-fix/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
depends: [
  "dune" {>= "1.11.4"}
  "ppx_deriving" {>= "4.4"}
  "ppx_deriving_yojson" {>= "3.5.1"}
  "rresult" {>= "0.6.0"}
  "ppx_deriving" {>= "4.4"}
  "uuidm" {>= "0.9.7"}
  "fixtypes" {= version}
  "fix" {= version}
  "base64" {>= "3.2.0"}
  "digestif" {>= "0.8.0"}
  "sexplib" {>= "v0.12.0"}
  "uri" {>= "3.1.0"}
]
synopsis: "FIX library"
description: """
"""
