opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-fix"
bug-reports: "https://github.com/vbmithr/ocaml-fix/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-fix"
doc: "https://vbmithr.github.io/ocaml-fix/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
depends: [
  "dune" {>= "1.11.4"}
  "ppx_deriving_yojson" {>= "3.5.1"}
  "fixtypes" {= version}
  "rresult" {>= "0.6.0"}
  "astring" {>= "0.8.3"}
  "ptime" {>= "0.8.5"}
  "sexplib" {>= "v0.12.0"}
  "angstrom" {>= "0.12.1"}
  "faraday" {>= "0.7.0"}
]
synopsis: "FIX protocol: library to create FIX fields and messages"
description:"""The Financial Information eXchange (FIX) protocol is
an electronic communications protocol initiated in 1992 for
international real-time exchange of information related to securities
transactions and markets."""
