opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-fix"
bug-reports: "https://github.com/vbmithr/ocaml-fix/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-fix"
doc: "https://vbmithr.github.io/ocaml-fix/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
depends: [
  "dune" {>= "1.11.4"}
  "ppx_deriving_yojson" {>= "3.5.1"}
  "sexplib" {>= "v0.12.0"}
  "fixtypes" {= version}
  "fix" {= version}
  "fix-deribit" {= version}
  "fix-coinbasepro" {= version}
  "fix-ftx" {= version}
]
synopsis: "FIX library"
description: """
"""
