opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-fix"
bug-reports: "https://github.com/vbmithr/ocaml-fix/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-fix"
doc: "https://vbmithr.github.io/ocaml-fix/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
depends: [
  "dune" {>= "1.11.4"}
  "ptime" {>= "0.8.5"}
  "ppx_deriving_yojson" {>= "3.5.1"}
  "sexplib" {>= "v0.12.0"}
  "fixtypes"
  "fix"
  "fix-async"
  "fix-deribit"
  "fix-coinbasepro"
  "fix-ftx"
]
pin-depends: [
  ["fixtypes.dev" "git+https://github.com/vbmithr/ocaml-fix.git"]
  ["fix.dev" "git+https://github.com/vbmithr/ocaml-fix.git"]
  ["fix-async.dev" "git+https://github.com/vbmithr/ocaml-fix.git"]
  ["fix-deribit.dev" "git+https://github.com/vbmithr/ocaml-fix.git"]
  ["fix-coinbasepro.dev" "git+https://github.com/vbmithr/ocaml-fix.git"]
  ["fix-ftx.dev" "git+https://github.com/vbmithr/ocaml-fix.git"]
]
synopsis: "FIX protocol: high level types and messages"
description:"""The Financial Information eXchange (FIX) protocol is
an electronic communications protocol initiated in 1992 for
international real-time exchange of information related to securities
transactions and markets."""
