opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-fix"
bug-reports: "https://github.com/vbmithr/ocaml-fix/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-fix"
doc: "https://vbmithr.github.io/ocaml-fix/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.11.4"}
  "ppx_deriving" {>= "4.4"}
  "ppx_deriving_yojson" {>= "3.5.1"}
  "ocplib-json-typed" {>= "0.7.1"}
  "fmt" {>= "0.8.8"}
  "uuidm" {>= "0.9.7"}
  "bin_prot" {>= "v0.13.0"}
  "ppx_bin_prot" {>= "v0.13.0"}
  "rresult" {>= "0.6.0"}
  "astring" {>= "0.8.3"}
  "ptime" {>= "0.8.5"}
  "sexplib" {>= "v0.12.0"}
  "tyre" {>= "0.4.1"}
  "alcotest" {with-test & >= "0.8.5"}
]
synopsis: "FIX protocol: types"
description:"""The Financial Information eXchange (FIX) protocol is
an electronic communications protocol initiated in 1992 for
international real-time exchange of information related to securities
transactions and markets."""
