(library
 (name fixtypes)
 (public_name fixtypes)
 (modules fixtypes)
 (preprocess (pps ppx_sexp_conv ppx_deriving_yojson ppx_deriving.show ppx_bin_prot))
 (libraries ocplib-json-typed fmt uuidm bin_prot rresult astring ptime sexplib tyre))

(library
 (name fix)
 (public_name fix)
 (modules field fix)
 (preprocess (pps ppx_sexp_conv ppx_deriving_yojson ppx_bin_prot))
 (libraries fixtypes rresult astring ptime sexplib angstrom faraday))

(library
 (name fix_async)
 (public_name fix-async)
 (modules fix_async_raw fix_async)
 (preprocess (pps ppx_sexp_conv ppx_deriving_yojson ppx_bin_prot))
 (libraries uri-sexp fix core async angstrom-async faraday-async async-uri logs-async))

(library
 (name fix_deribit)
 (public_name fix-deribit)
 (modules fix_deribit)
 (preprocess (pps ppx_sexp_conv ppx_deriving_yojson ppx_bin_prot))
 (libraries
   fixtypes
   fix
   rresult
   ptime
   base64
   monocypher
   sexplib
   digestif.c
   uri))

(library
 (name fix_coinbasepro)
 (public_name fix-coinbasepro)
 (modules fix_coinbasepro)
 (preprocess (pps ppx_sexp_conv ppx_deriving_yojson ppx_deriving.show ppx_bin_prot))
 (libraries
   rresult
   ppx_deriving.show
   uuidm
   fixtypes
   fix
   base64
   digestif.c
   sexplib
   uri))

(library
 (name fix_ftx)
 (public_name fix-ftx)
 (modules fix_ftx)
 (preprocess (pps ppx_sexp_conv ppx_deriving_yojson ppx_bin_prot))
 (libraries uuidm fixtypes fix hex digestif.c uri))

(library
 (name fixmsg)
 (public_name fixmsg)
 (modules fixmsg)
 (preprocess (pps ppx_sexp_conv ppx_deriving_yojson ppx_bin_prot))
 (libraries fixtypes fix fix_deribit fix_coinbasepro fix_ftx))
