(library
 (name fixtypes)
 (public_name fixtypes)
 (modules fixtypes)
 (preprocess (pps ppx_sexp_conv ppx_deriving_yojson ppx_deriving.show ppx_bin_prot))
 (libraries
   ppx_deriving
   ppx_deriving_yojson
   ocplib-json-typed
   fmt
   uuidm
   bin_prot
   rresult
   astring
   ptime
   sexplib
   tyre))

(library
 (name fix)
 (public_name fix)
 (modules field fix)
 (preprocess (pps ppx_sexp_conv ppx_deriving_yojson ppx_bin_prot))
 (libraries
   ppx_deriving_yojson
   fixtypes
   rresult
   astring
   ptime
   sexplib
   angstrom
   faraday))

(library
 (name fix_async)
 (public_name fix-async)
 (modules fix_async_raw fix_async)
 (preprocess (pps ppx_sexp_conv ppx_bin_prot))
 (libraries
   uri-sexp
   fix
   logs
   logs-async
   core
   async
   angstrom-async
   faraday-async
   async-uri))

(library
 (name fix_deribit)
 (public_name fix-deribit)
 (modules fix_deribit)
 (preprocess (pps ppx_sexp_conv ppx_deriving_yojson ppx_bin_prot))
 (libraries
   ppx_deriving_yojson
   fixtypes
   fix
   rresult
   ptime
   base64
   sexplib
   digestif.c
   uri))

(library
 (name fix_coinbasepro)
 (public_name fix-coinbasepro)
 (modules fix_coinbasepro)
 (preprocess (pps ppx_sexp_conv ppx_deriving_yojson ppx_deriving.show ppx_bin_prot))
 (libraries
   ppx_deriving
   ppx_deriving_yojson
   rresult
   ppx_deriving.show
   uuidm
   fixtypes
   fix
   base64
   digestif.c
   sexplib
   uri))

(library
 (name fix_ftx)
 (public_name fix-ftx)
 (modules fix_ftx)
 (preprocess (pps ppx_sexp_conv ppx_bin_prot))
 (libraries
   uuidm
   fixtypes
   fix
   hex
   digestif.c
   uri))

(library
 (name fixmsg)
 (public_name fixmsg)
 (modules fixmsg)
 (preprocess (pps ppx_sexp_conv ppx_deriving_yojson ppx_bin_prot))
 (libraries
   ppx_deriving_yojson
   sexplib
   fixtypes
   fix
   fix-deribit
   fix-coinbasepro
   fix-ftx))
